--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>bienvenue </p>
+        <p>lamborghini</p>
+        <img src="picture/lambo1" alt="voiture">
     </body>
 </html>
