--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
     </head>
     <body>
         <p>lamborghini</p>
-        <img src="font/lambo1.jpg" alt="voiture">
+        <img class="voitureAccueil" src="font/lambo1.jpg" alt="voiture">
     </body>
 </html>
