--- a/index.html
+++ b/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this template
--->
 <html>
     <head>
-        <title>Accueil lamborghini</title>
+        <title>Connexion</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </head>
     <body>
-        <p>lamborghini</p>
-        <img class="voitureAccueil" src="font/lambo1.jpg" alt="voiture">
+        <h1>Formulaire connexion</h1>
+        <div class="">
+            <div class="">
+                <label for="nom">Nom</label>
+                <input type="text" name="nom" id="nom" value="">
+            </div>
+            <div class="">
+                <label for="prenom">Prenom</label>
+                <input type="text" name="prenom" id="prenom" value="">
+            </div>
+            <div class="">
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email" value="">
+            </div>
+            <div class="">
+                <label for="mdp">Mot de passe</label>
+                <input type="password" name="mdp" id="mdp" value="">
+            </div>
+            <div class="">
+                <input type="submit" value="Valider">
+            </div>
+        </div>
+            
+        
     </body>
 </html>
